--- a/SyncTable.html
+++ b/SyncTable.html
@@ -148,11 +148,12 @@
     </div>
 
   <nav class="nav-content">
-    <a href="/" class="logo">Gmail Genie</a>
+    <a class="logo">Gmail Genie</a>
     <div class="nav-links">
       <a href="home.html">Home</a>
-      <a href="#about">Sync</a>
-      <a href="/login.html">Logout</a>
+      <a href="SyncTable.html">Sync</a>
+      <a href="ContactUs.html">Contact</a>
+      <a href="login.html">Logout</a>
     </div>
   </nav>
   
