--- a/getStarted.html
+++ b/getStarted.html
@@ -36,7 +36,6 @@
         }
 
         .nav-content {
-            max-width: 1200px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -178,11 +177,12 @@
 
     <nav>
         <div class="nav-content">
-            <a href="/" class="logo">Gmail Genie</a>
+            <a class="logo">Gmail Genie</a>
             <div class="nav-links">
                 <a href="home.html">Home</a>
-                <a href="SyncTabe.html">Sync</a>
-                <a href="/login.html">Logout</a>
+                <a href="SyncTable.html">Sync</a>
+                <a href="ContactUs.html">Contact</a>
+                <a href="login.html">Logout</a>
             </div>
         </div>
     </nav>
