--- a/login.html
+++ b/login.html
@@ -143,7 +143,7 @@ a{
         <div class="shape"></div>
     </div>
     
-    <form>
+    <form action="home.html">
         <h3>Login Here</h3>
 
         <label for="username">Username</label>
@@ -154,7 +154,7 @@ a{
 
         <button>Log In</button>
         <div class="social">
-          <div class="go"><a href="/oauth2/authorization/google"><i class="fab fa-google"></i>Google</a></div>
+          <div class="go"><a href="home.html"><i class="fab fa-google"></i>Google</a></div>
         </div>
     </form>
 </body>
